Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* ublock.c :

	Added "select" function for Ctrl-arrow selecting.
	Ctrl-space drops anchor and sets marking mode.

Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* uerror.c :

	Improve error parser: require ':' on error lines.
	Make macro 'compile' for error parsing.
	'compile' macro always uses same buffer.
	^X ` in jmacs goes to next error.

Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c :

	Smart tab looks back 10 lines to determine indentation.

Wed May  5 2004  Joe Allen <jhallen@world.std.com>
	* charmap.c :

	Now parses charmap files.

Wed May  5 2004  Joe Allen <jhallen@world.std.com>
 	* bw.c charmap.c main.c qw.c qw.h regex.c regex.h 
 	syntax.c types.h uisrch.c usearch.c utf8.c utf8.h:

	Regex search now works properly with UTF-8 chars.
	Incremental search now works with UTF-8.

Wed May  5 2004  Joe Allen <jhallen@world.std.com>
	* utils.c, c.jsf.in:

	Fix c++ keywords.
	Fix parse_ident, which was breaking fortran highlighter.

Tue May  4 2004  Joe Allen <jhallen@world.std.com>
	* rc.c, selinux.c, syntax.c, ufile.c:

	Applied new Selinux patch.

	Checks ~/.joe/syntax for syntax files.

Tue May  4 2004  Joe Allen <jhallen@world.std.com>
	* bw.c, charmap.c, main.c:

	Print locale on startup line.

	Print encoding for ^K <space>.

	Change koi8-T to koi8-t.

Tue May  4 2004  Joe Allen <jhallen@world.std.com>
	* ChangeLog TODO b.c bw.c charmap.c charmap.h cmd.c help.c 
 	i18n.c i18n.h joerc.in jpicorc.in jstarrc.in macro.c main.c 
 	menu.c pw.c pw.h rc.c regex.c rjoerc.in scrn.c scrn.h syntax.c 
 	types.h ublock.c uedit.c uerror.c ufile.c uformat.c umath.c 
 	usearch.c ushell.c utag.c utf8.c utils.c utils.h w.c:

	Everything about character set is now contained in struct charmap.

	Deprecate ^T U.  Now use ^T E to select file encoding.

Mon May  3 2004  Joe Allen <jhallen@world.std.com>
	* :

	Clean up pass: use internal ctype function everywhere.

	Also: ^T E sets file encoding.
