@@ -761,6 +761,7 @@ rtn		^I
 rtn		^K H
 rtn		^K h
 rtn		^K ^H
+tabmenu		^I
 uparwmenu	.ku
 uparwmenu	^P
 uparwmenu	^[ [ A
